--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build:prod": "max build && node sourcemap.js",
     "dev": "max dev",
     "format": "prettier --cache --write .",
+    "init": "yarn add md-web-ui web-tools --registry=http://verdaccio.huojintech.com/",
     "postinstall": "max setup",
     "prepare": "husky install",
     "setup": "max setup",
@@ -17,7 +18,7 @@
     "@ant-design/pro-components": "^2.0.1",
     "@babel/code-frame": "^7.18.6",
     "@types/babel__code-frame": "^7.0.3",
-    "@umijs/max": "^4.0.47",
+    "@umijs/max": "^4.0.50",
     "ahooks": "^3.7.4",
     "anser": "^2.1.1",
     "antd": "^5.0.0",
